Fix redundant validation and adjust test